added content div and styles

--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -18,10 +18,11 @@
   margin-top: 14px;
 }
 
-.content {
-  padding-left: 35px;
+.content-div {
+  margin-top: 30px;
 }
 
 h2 {
   font-weight: 400;
+  color: #1B6CA8;
 }
