--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -11,10 +11,24 @@
 
 <div class="content">
 
-  <% @articles.each do |article| %>
-  <h2><%= article.title %></h2>
-  <%= article.content %>
-  <% end %>
+  <div class="row">
+    <div class="col">
+    </div>
+    <div class="col-7">
+      <% @articles.each do |article| %>
+        <div class="content-div">
+          <h2>
+            <a style="color: #337ab7" href="">
+            <%= article.title %>
+            </a>
+          </h2>
+          <%= article.content %>
+        </div>
+      <% end %>
+    </div>
+    <div class="col">
+    </div>
+
+  </div>
 
 </div>
-
