--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,14 +1,3 @@
-<div class="navbar-light bg-light mb-3">
-  <div class="navbar-container">
-    <div class="link-div mt-0">
-      <a class="navbar-brand" href="">Wikinimous</a>
-    </div>
-    <div class="link-div mt-0">
-      <a class="navbar-brand" href="">New article</a>
-    </div>
-  </div>
-</div>
-
 <div class="content">
 
   <div class="row">
@@ -18,9 +7,7 @@
       <% @articles.each do |article| %>
         <div class="content-div">
           <h2>
-            <a style="color: #337ab7" href="">
-            <%= article.title %>
-            </a>
+            <%= link_to article.title, article_path(article) %>
           </h2>
           <%= article.content %>
         </div>
