--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,12 +7,22 @@
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+    <script src="https://kit.fontawesome.com/db2822833a.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
   </head>
 
   <body>
+    <div class="navbar-light bg-light mb-3">
+      <div class="navbar-container">
+        <div class="link-div mt-2">
+          <%= link_to "Wikinimous", articles_path %>
+        </div>
+        <div class="link-div mt-2">
+          <%= link_to "New Article", new_article_path %>
+        </div>
+      </div>
+    </div>
     <%= yield %>
   </body>
 </html>
