--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -4,19 +4,34 @@
     <div class="col">
     </div>
     <div class="col-7">
-        <div class="content-div">
-          <h1>New Article</h1>
+      <%= form_for @article do |f| %>
+
+        <h1>New Article</h1>
+
+        <div class="mt-3">
+          <p> <strong><%= f.label :title, "Title" %> </strong></p>
         </div>
-        <form>
-          <div class="form-group">
-            <label for="inputtitle">Title</label>
-            <input type="text" class="form-control" id="inputtitle" placeholder="Article 1">
-          </div>
 
-          <div class="form-group">
+        <div>
+          <%= f.text_field :title, size: "60" %>
+        </div>
 
-          </div>
-        </form>
+        <div class="mt-3">
+          <p> <strong><%= f.label :content, "Content" %></strong></p>
+        </div>
+
+        <div>
+          <%= f.text_area :content, size: "60x12" %>
+        </div>
+
+        <div class="mt-3">
+          <%= f.submit %>
+        </div>
+
+      <% end %>
+        <div class="mt-3">
+          <%= link_to "⟲ Back", articles_path  %>
+        </div>
     </div>
     <div class="col">
     </div>
