edited margin in navbar and refactored with set_article

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,10 +15,10 @@
   <body>
     <div class="navbar-light bg-light mb-3">
       <div class="navbar-container">
-        <div class="link-div mt-2">
+        <div class="link-div my-2">
           <%= link_to "Wikinimous", articles_path %>
         </div>
-        <div class="link-div mt-2">
+        <div class="link-div my-2">
           <%= link_to "New Article", new_article_path %>
         </div>
       </div>
