--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -4,34 +4,12 @@
     <div class="col">
     </div>
     <div class="col-7">
-      <%= form_for @article do |f| %>
 
-        <h1>New Article</h1>
+      <%= render 'form' %>
 
-        <div class="mt-3">
-          <p> <strong><%= f.label :title, "Title" %> </strong></p>
-        </div>
-
-        <div>
-          <%= f.text_field :title, size: "60" %>
-        </div>
-
-        <div class="mt-3">
-          <p> <strong><%= f.label :content, "Content" %></strong></p>
-        </div>
-
-        <div>
-          <%= f.text_area :content, size: "60x12" %>
-        </div>
-
-        <div class="mt-3">
-          <%= f.submit %>
-        </div>
-
-      <% end %>
-        <div class="mt-3">
-          <%= link_to "⟲ Back", articles_path  %>
-        </div>
+      <div class="mt-3">
+        <%= link_to "⟲ Back", articles_path  %>
+      </div>
     </div>
     <div class="col">
     </div>
